parameters now loaded from config.json

--- a/pipe-extraction-hough/config.json
+++ b/pipe-extraction-hough/config.json
@@ -1,7 +1,5 @@
 {
-  "global": {
-    "slice_thickness": 0.1
-  },
+  "slice_thickness": 0.1,
   "hough": {
     "cell_size": 0.01,
     "canny_sigma": 1.6,
@@ -10,7 +8,7 @@
     "max_line_gap": 0.5
   },
   "slice_cluster_and_merge": {
-    "dbscan_epsilon": 0.35,
+    "epsilon": 0.35,
     "min_samples": 3,
     "rho_scale": 1.0,
     "preserve_noise": false,
@@ -18,7 +16,7 @@
     "max_line_gap": 2.0
   },
   "global_cluster_and_merge": {
-    "dbscan_epsilon": 0.5,
+    "epsilon": 0.5,
     "min_samples": 1,
     "rho_scale": 1.3,
     "preserve_noise": true,
@@ -30,7 +28,7 @@
     "tangential_length": 0.05,
     "min_points_for_centroid": 4,
     "samples_per_meter": 2.0,
-    "min_point_samples": 3,
+    "min_sample_points": 3,
     "poisson_radius": 0.02,
     "quantization_precision": 0.01
   }
