--- a/config.json
+++ b/config.json
@@ -31,5 +31,11 @@
     "min_sample_points": 3,
     "poisson_radius": 0.02,
     "quantization_precision": 0.01
+  },
+  "pipeComponent_clustering": {
+    "filter_near_pipes": true,
+    "min_points": 20,
+    "cluster_selection_method": "eom",
+    "leaf_size": 40
   }
 }
