--- a/config.json
+++ b/config.json
@@ -30,12 +30,18 @@
     "samples_per_meter": 2.0,
     "min_sample_points": 3,
     "poisson_radius": 0.02,
-    "quantization_precision": 0.01
+    "quantization_precision": 0.01,
+    "max_angle_change_deg": 15.0,
+    "ransac_residual_threshold": 0.05,
+    "min_points_per_bucket": 3,
+    "merge_jump_threshold": 3.0
   },
   "pipeComponent_clustering": {
     "filter_near_pipes": true,
     "min_points": 20,
+    "metric": "euclidean",
     "cluster_selection_method": "eom",
-    "leaf_size": 40
+    "leaf_size": 40,
+    "pipe_distance_threshold": 0.5
   }
 }
