--- a/config.json
+++ b/config.json
@@ -1,24 +1,25 @@
 {
+  "parallel_worker": 16,
   "slice_thickness": 0.1,
   "hough": {
     "cell_size": 0.01,
-    "canny_sigma": 1.6,
-    "threshold": 10,
+    "canny_sigma": 1.2,
+    "threshold": 5,
     "min_line_length": 1.5,
     "max_line_gap": 0.5
   },
   "slice_cluster_and_merge": {
-    "epsilon": 0.35,
+    "epsilon": 0.45,
     "min_samples": 3,
-    "rho_scale": 1.0,
+    "rho_scale": 0.8,
     "preserve_noise": false,
     "min_line_length": 1.5,
     "max_line_gap": 2.0
   },
   "global_cluster_and_merge": {
-    "epsilon": 0.5,
+    "epsilon": 0.7,
     "min_samples": 1,
-    "rho_scale": 1.3,
+    "rho_scale": 1.5,
     "preserve_noise": true,
     "min_line_length": 1.0,
     "max_line_gap": 2.0
