--- a/environment.yml
+++ b/environment.yml
@@ -1,7 +1,6 @@
 name: pipe-extraction
 channels:
   - conda-forge
-  - defaults
 dependencies:
   - python=3.13
   - numpy=2.3.3
@@ -11,3 +10,9 @@ dependencies:
   - scikit-image=0.25.2
   - matplotlib=3.10.6
   - scipy=1.16.2
+
+  # Webserver dependencies
+  - fastapi=0.128.0
+  - uvicorn=0.40.0
+  - filelock=3.20.3
+  - requests=2.32.5
