--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=45", "wheel"]
+requires = ["setuptools>=68", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -22,16 +22,17 @@ dependencies = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/BenediktBeigang/pipe-vector-extractor"
-Repository = "https://github.com/BenediktBeigang/pipe-vector-extractor"
+Homepage = "https://github.com/BenediktBeigang/Master-Thesis-pipeExtractor"
+Repository = "https://github.com/BenediktBeigang/Master-Thesis-pipeExtractor"
 
 [project.optional-dependencies]
 dev = ["black"]
 
+[project.scripts]
+pipe-extractor = "pipeExtractor.pipeExtraction_cli:main"
+
 [tool.setuptools]
-py-modules = ["pipeline", "util", "custom_types", "export_geojson", "pipeExtraction_cli"]
-packages = [
-    "pipe_extraction",
-    "pipeComponent_extraction", 
-    "eval"
-]
+package-dir = {"" = "src"}
+
+[tool.setuptools.packages.find]
+where = ["src"]
