removed project structure to match pip package format

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,3 @@
 include config.json
 include README.adoc
-recursive-include pipe_extraction *.py
-recursive-include pipeComponent_extraction *.py
-recursive-include eval *.py
+include environment.yml
