--- a/environment.yml
+++ b/environment.yml
@@ -2,7 +2,8 @@ name: pipe-extraction
 channels:
   - conda-forge
 dependencies:
-  - python=3.13
+  - python=3.12
+  - pdal=2.9.2
   - numpy=2.3.3
   - pandas=2.3.3
   - laspy=2.6.1
